Programmer notes